styles/main.scss
@import "variables.scss";
@import "./cards.scss";
@import "./scoreCard.scss";
@import "./modal.scss";


body {
  max-height: 100vh;
  overflow: hidden;
  position: relative;
}
.ta-c {
  text-align: center;
}

.main-section {
  padding: 0px;
  background-color: #E6E7E9;
}

.p-40 {
  padding: 40px;
}

.p-b0 {
  padding-top: 0px;
}

.dot{
  cursor: pointer;
  position: absolute;
  top: 50%;
  border-radius: 100%;
  width: 20px;
  height: 20px;
  background: transparent;
  z-index: 10;
  transition: all 1s ease-out;
  /*transform: scale(0.1);*/ /* /10 */
  opacity: 0.9;
}

.anim{
  transform: scale(10);
}

.final-card-layout {
  position: absolute;
  width: 45%;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  z-index: 12;
  div:first-child {
    height:85px;width:100%;margin-bottom: 40px;
  }
}

#play-again {
    position: absolute;
    bottom: -75px;
    font-size: 15px;
    font-weight: 600;
    text-decoration: underline;
    color: #4a4a4a;
    cursor: pointer;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, 0%);
}

.hide {
  display: none;
}

.word {
  display: inline-block;
  opacity: 0;
  margin: auto;
  display: block;
}

.word.animated {
  animation-timing-function: ease-in;
  animation-duration: 1s;
  animation-name: appear;
  animation-fill-mode: forwards;
}

.word.animated .word-inner-wrap {
  animation-timing-function: ease-in;
  animation-duration: 0.5s;
  animation-name: wrap-appear;
  animation-fill-mode: forwards;
}

@keyframes appear {
  0% {
    opacity: 0;
    transform: scale(0.0001);
    -webkit-filter: blur(7px);
  }

  75% {
  	opacity: 1;
  	transform: scale(1.5);
  	-webkit-filter: blur(0px);
  }

  100% {
    opacity: 1;
    transform: scale(1);
    -webkit-filter: blur(0px);
  }
}

/* http://stackoverflow.com/questions/19161422/cant-animate-blur-and-transform-together */
@keyframes wrap-appear {
  0% {
    color: rgba(255, 255, 255, 0);
  }

  50% {
    color: rgba(255, 255, 255, 0.5);
    text-shadow: 0 0 100px #fff,
                 0 0 100px #fff,
                 0 0 100px #fff,
                 0 0 100px #fff,
                 0 0 100px #fff,
                 0 0 100px #fff,
                 0 0 100px #fff;
  }

  75% {
    color: rgba(255, 255, 255, 1);
  }

  100% {
    color: rgba(255, 255, 255, 0.8);
  }
}

#win-text {
  margin: auto;
  display: block;
}

